@@ -115,6 +115,7 @@ Q_DECLARE_METATYPE(tspResource)
 //----------------------------------------------------------------------------------------
 //
 bool IsLocalFile(const QUrl& url);
+QString PhysicalResourcePath(const tspResource& spResource);
 QString ResourceUrlToAbsolutePath(const tspResource& spResource, const QString& sResourceScheme = ":");
 QUrl ResourceUrlFromLocalFile(const QString& sPath);
 
